# otmixmod

./: .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile.in  README  README.rst  libmixmod_3.2.2_src.tgz  run_docker_build.sh  setVersionNumber.sh
.ci_support/: run_docker_linux.sh  run_docker_mingw.sh
.github/workflows/: build.yml
cmake/: FindMixmod.cmake  OTMixmodConfig.cmake.in  UseOTMixmod.cmake
distro/debian/: changelog  control  copyright  rules
distro/rpm/: otmixmod.spec
distro/windows/: Makefile  README.txt  installer.nsi
doc/: CMakeLists.txt  GenericInformation.tex.in  otmixmod_Documentation.sty  otmixmod_Documentation.tex  otmixmod_UseCasesGuide.tex  otmixmod_UserManual.tex  script_2DMixture.py
lib/: CMakeLists.txt
lib/include/: CMakeLists.txt
lib/include/otmixmod/: OTMIXMODprivate.hxx
lib/src/: CMakeLists.txt  Gaussian_p_L_B.cxx  Gaussian_p_L_B.hxx  Gaussian_p_L_Bk.cxx  Gaussian_p_L_Bk.hxx  Gaussian_p_L_C.cxx  Gaussian_p_L_C.hxx  Gaussian_p_L_Ck.cxx  Gaussian_p_L_Ck.hxx  Gaussian_p_L_D_Ak_D.cxx  Gaussian_p_L_D_Ak_D.hxx  Gaussian_p_L_Dk_A_Dk.cxx  Gaussian_p_L_Dk_A_Dk.hxx  Gaussian_p_L_I.cxx  Gaussian_p_L_I.hxx  Gaussian_p_Lk_B.cxx  Gaussian_p_Lk_B.hxx  Gaussian_p_Lk_Bk.cxx  Gaussian_p_Lk_Bk.hxx  Gaussian_p_Lk_C.cxx  Gaussian_p_Lk_C.hxx  Gaussian_p_Lk_Ck.cxx  Gaussian_p_Lk_Ck.hxx  Gaussian_p_Lk_D_Ak_D.cxx  Gaussian_p_Lk_D_Ak_D.hxx  Gaussian_p_Lk_Dk_A_Dk.cxx  Gaussian_p_Lk_Dk_A_Dk.hxx  Gaussian_p_Lk_I.cxx  Gaussian_p_Lk_I.hxx  Gaussian_pk_L_B.cxx  Gaussian_pk_L_B.hxx  Gaussian_pk_L_Bk.cxx  Gaussian_pk_L_Bk.hxx  Gaussian_pk_L_C.cxx  Gaussian_pk_L_C.hxx  Gaussian_pk_L_Ck.cxx  Gaussian_pk_L_Ck.hxx  Gaussian_pk_L_D_Ak_D.cxx  Gaussian_pk_L_D_Ak_D.hxx  Gaussian_pk_L_Dk_A_Dk.cxx  (+25 more)
lib/src/mixmod/: CMakeLists.txt
lib/src/mixmod/MIXMOD/: CMakeLists.txt  XEMAlgo.cpp  XEMAlgo.h  XEMBICCriterion.cpp  XEMBICCriterion.h  XEMBinaryData.cpp  XEMBinaryData.h  XEMBinaryEParameter.cpp  XEMBinaryEParameter.h  XEMBinaryEjParameter.cpp  XEMBinaryEjParameter.h  XEMBinaryEkParameter.cpp  XEMBinaryEkParameter.h  XEMBinaryEkjParameter.cpp  XEMBinaryEkjParameter.h  XEMBinaryEkjhParameter.cpp  XEMBinaryEkjhParameter.h  XEMBinaryParameter.cpp  XEMBinaryParameter.h  XEMBinarySample.cpp  XEMBinarySample.h  XEMCEMAlgo.cpp  XEMCEMAlgo.h  XEMCVCriterion.cpp  XEMCVCriterion.h  XEMClusteringInput.cpp  XEMClusteringInput.h  XEMClusteringMain.cpp  XEMClusteringMain.h  XEMClusteringModelOutput.cpp  XEMClusteringModelOutput.h  XEMClusteringOutput.cpp  XEMClusteringOutput.h  XEMClusteringStrategy.cpp  XEMClusteringStrategy.h  XEMClusteringStrategyInit.cpp  XEMClusteringStrategyInit.h  XEMColumnDescription.cpp  XEMColumnDescription.h  XEMCondExe.cpp  (+113 more)
lib/src/mixmod/NEWMAT/: CMakeLists.txt  bandmat.cpp  boolean.h  cholesky.cpp  controlw.h  evalue.cpp  fft.cpp  hholder.cpp  include.h  jacobi.cpp  myexcept.cpp  myexcept.h  newfft.cpp  newmat.h  newmat1.cpp  newmat2.cpp  newmat3.cpp  newmat4.cpp  newmat5.cpp  newmat6.cpp  newmat7.cpp  newmat8.cpp  newmat9.cpp  newmatap.h  newmatex.cpp  newmatio.h  newmatnl.cpp  newmatnl.h  newmatrc.h  newmatrm.cpp  newmatrm.h  precisio.h  solution.cpp  solution.h  sort.cpp  submat.cpp  svd.cpp
lib/src/otmixmod/: Gaussian_p_L_B.hxx  Gaussian_p_L_C.hxx  Gaussian_p_L_Ck.hxx  Gaussian_p_L_Dk_A_Dk.hxx  Gaussian_p_L_I.hxx  Gaussian_p_Lk_Ck.hxx  Gaussian_p_Lk_D_Ak_D.hxx  Gaussian_p_Lk_Dk_A_Dk.hxx  Gaussian_pk_L_Dk_A_Dk.hxx  Gaussian_pk_L_I.hxx  Gaussian_pk_Lk_Ck.hxx  Gaussian_pk_Lk_D_Ak_D.hxx  Gaussian_pk_Lk_Dk_A_Dk.hxx  Gaussian_pk_Lk_I.hxx  MixmodCovarianceModelImplementation.hxx  MixtureClassifierFactory.hxx  MixtureFactory.hxx
lib/test/: CMakeLists.txt  t_MixtureFactory_expert.cxx  t_MixtureFactory_expert.expout  t_MixtureFactory_std.cxx  t_MixtureFactory_std.expout
python/doc/: conf.py.in  index.rst  openturns-objects.inv
python/doc/examples/: plot_example1.py
python/doc/themes/openturns/: layout.html
python/doc/user_manual/: user_manual.rst
python/src/: CMakeLists.txt  Gaussian_p_L_B.i  Gaussian_p_L_Bk.i  Gaussian_p_L_C.i  Gaussian_p_L_Ck.i  Gaussian_p_L_D_Ak_D.i  Gaussian_p_L_Dk_A_Dk.i  Gaussian_p_L_I.i  Gaussian_p_Lk_B.i  Gaussian_p_Lk_Bk.i  Gaussian_p_Lk_C.i  Gaussian_p_Lk_Ck.i  Gaussian_p_Lk_D_Ak_D.i  Gaussian_p_Lk_Dk_A_Dk.i  Gaussian_p_Lk_I.i  Gaussian_pk_L_B.i  Gaussian_pk_L_Bk.i  Gaussian_pk_L_C.i  Gaussian_pk_L_Ck.i  Gaussian_pk_L_D_Ak_D.i  Gaussian_pk_L_Dk_A_Dk.i  Gaussian_pk_L_I.i  Gaussian_pk_Lk_B.i  Gaussian_pk_Lk_Bk.i  Gaussian_pk_Lk_C.i  Gaussian_pk_Lk_Ck.i  Gaussian_pk_Lk_D_Ak_D.i  Gaussian_pk_Lk_Dk_A_Dk.i  Gaussian_pk_Lk_I.i  METADATA.in  MixmodCovarianceModel.i  MixmodCovarianceModelImplementation.i  MixtureClassifierFactory.i  MixtureFactory.i  MixtureFactory_doc.i.in  __init__.py  otmixmod_module.i
python/test/: CMakeLists.txt  t_MixtureFactory_expert.expout  t_MixtureFactory_expert.py  t_MixtureFactory_std.expout  t_MixtureFactory_std.py  t_docstring.py
utils/: lint.sh
